--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Markbook Landing Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="./dist/output.css">
 </head>
 <body class="font-Poppins">
     <!--Header-->
     <header>
         <nav class="container flex items-center py-4 mt-4 sm:mt-12">
-            <div class="py-1 "><img src="./imgs/logo-bookmark.svg" alt=""></div>
+            <div class="py-1 "><img src="./dist/imgs/logo-bookmark.svg" alt=""></div>
             <ul class="hidden sm:flex flex-1 justify-end items-center gap-12 text-bookmark-blue uppercase text-xs">
                 <li class="cursor-pointer">Features</li>
                 <li class="cursor-pointer">Pricing</li>
@@ -42,7 +42,7 @@
             </div>
             <!--Image-->
             <div class="flex justify-center flex-1 mb-10 md:mb-16 lg:mb-0 z-10">
-                <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full " src="./imgs/hero-bg.png" alt="">
+                <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full " src="./dist/imgs/hero-bg.png" alt="">
             </div>
         </div>
         <!--Rounded Rectangle-->
@@ -64,7 +64,7 @@
             <div class="container flex flex-col lg:flex-row items-center justify-content gap-x-24 ">
                 <!--Image-->
                 <div class="flex flex-1 justify-cetner z-10 mb-10 lg:mb-0 ">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./imgs/illustration-features-tab-1.png" alt="">
+                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./dist/imgs/illustration-features-tab-1.png" alt="">
                 </div>
                 <!--Content-->
                 <div class="flex flex-1 flex-col items-center lg:items-start">
@@ -84,7 +84,7 @@
             <div class="container flex flex-col lg:flex-row-reverse items-center justify-content gap-x-24 ">
                 <!--Image-->
                 <div class="flex flex-1 justify-cetner z-10 mb-10 lg:mb-0 ">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./imgs/illustration-features-tab-2.png" alt="">
+                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./dist/imgs/illustration-features-tab-2.png" alt="">
                 </div>
                 <!--Content-->
                 <div class="flex flex-1 flex-col items-center lg:items-start">
@@ -104,7 +104,7 @@
             <div class="container flex flex-col lg:flex-row items-center justify-content gap-x-24 ">
                 <!--Image-->
                 <div class="flex flex-1 justify-cetner z-10 mb-10 lg:mb-0 ">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./imgs/illustration-features-tab-3.png" alt="">
+                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./dist/imgs/illustration-features-tab-3.png" alt="">
                 </div>
                 <!--Content-->
                 <div class="flex flex-1 flex-col items-center lg:items-start">
@@ -136,7 +136,7 @@
             <!--Card 1-->
             <div class="flex flex-col rounded-md shadow-md lg:mb-16">
                 <div class="p-6 flex flex-col items-center">
-                    <img src="./imgs/logo-chrome.svg" alt="">
+                    <img src="./dist/imgs/logo-chrome.svg" alt="">
                     <h3 class="mt-5 mb-2 text-bookmark-blue text-lg">Add to Chrome</h3>
                     <p class="mb-2 text-bookmark-grey font-light">Minimum version 62</p>
                 </div>
@@ -150,7 +150,7 @@
             <!--Card 2-->
             <div class="flex flex-col rounded-md shadow-md lg:my-8">
                 <div class="p-6 flex flex-col items-center">
-                    <img src="./imgs/logo-firefox.svg" alt="">
+                    <img src="./dist/imgs/logo-firefox.svg" alt="">
                     <h3 class="mt-5 mb-2 text-bookmark-blue text-lg">Add to Firefox</h3>
                     <p class="mb-2 text-bookmark-grey font-light">Minimum version 62</p>
                 </div>
@@ -164,7 +164,7 @@
             <!--Card 3-->
             <div class="flex flex-col rounded-md shadow-md lg:mt-16">
                 <div class="p-6 flex flex-col items-center">
-                    <img src="./imgs/logo-opera.svg" alt="">
+                    <img src="./dist/imgs/logo-opera.svg" alt="">
                     <h3 class="mt-5 mb-2 text-bookmark-blue text-lg">Add to Opera</h3>
                     <p class="mb-2 text-bookmark-grey font-light">Minimum version 62</p>
                 </div>
